--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,6 +32,7 @@ jobs:
       run: |
         cd frontend
         npm run build
+        CI=false npm run build
 
     - name: Deploy backend
       run: |
