--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,9 +1,10 @@
-name: Deploy Full Stack
+name: Deploy React App to GitHub Pages
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -13,38 +14,23 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
+    - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '18' # Change to your desired Node version
 
-    - name: Install backend dependencies
-      run: |
-        cd backend
-        npm install
-
-    - name: Install frontend dependencies
+    - name: Install dependencies
       run: |
         cd frontend
         npm install
 
-    - name: Build frontend
+    - name: Build the app
       run: |
         cd frontend
         npm run build
-        CI=false npm run build
 
-    - name: Deploy backend
-      run: |
-        cd backend
-        npm start &
-      
-    - name: Deploy frontend to GitHub Pages
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git checkout --orphan gh-pages
-        git --work-tree frontend/build add --all
-        git --work-tree frontend/build commit -m 'Deploy to GitHub Pages'
-        git push origin HEAD:gh-pages --force
-        rm -rf frontend/build
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./frontend/build
