--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,3 +1,5 @@
+
+
 name: Deploy React App to GitHub Pages
 
 on:
@@ -11,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Clear GitHub Pages cache
+      run: |
+        rm -rf ./frontend/build
     - name: Checkout code
       uses: actions/checkout@v2
 
