--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -13,6 +13,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Deploy to GitHub Pages
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git checkout --orphan gh-pages
+        git --work-tree frontend/build add --all
+        git --work-tree frontend/build commit -m 'Deploy to GitHub Pages'
+        git push origin HEAD:gh-pages --force
+        rm -rf frontend/build
     - name: Clear GitHub Pages cache
       run: |
         rm -rf ./frontend/build
