--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,3 @@
-
-
 name: Deploy React App to GitHub Pages
 
 on:
@@ -13,25 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Deploy to GitHub Pages
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git checkout --orphan gh-pages
-        git --work-tree frontend/build add --all
-        git --work-tree frontend/build commit -m 'Deploy to GitHub Pages'
-        git push origin HEAD:gh-pages --force
-        rm -rf frontend/build
-    - name: Clear GitHub Pages cache
-      run: |
-        rm -rf ./frontend/build
     - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18' # Change to your desired Node version
+        node-version: '18'
 
     - name: Install dependencies
       run: |
