--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://lachho.github.io/canto/",
+  "homepage": "https://github.com/lachho/canto",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
