--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://lachy.github.io/canto",
+  "homepage": "https://lachho.github.io/canto",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
